fixed parsing when next Argument is directly behind number fixed parsing leading '.' (omitted zero( fixed parsing with no space if number has leading '.' fixed parsing with no space if number is negative fixed parsing if next Argument is omitted removed output ','

--- a/Dev/site.css
+++ b/Dev/site.css
@@ -242,10 +242,6 @@ select {
                     width: 1.1em;
                     height: 1.1em;
                     margin-inline: 0.4em;
-
-                    &:nth-child(2) {
-                        margin-left: auto;
-                    }
                 }
             }
         }
